--- a/style.css
+++ b/style.css
@@ -47,5 +47,19 @@ header p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre douce */
 }
 
+/* About Me Section */
+.about-header {
+    text-align: left; /* Aligner le texte à gauche */
+    margin-bottom: 20px; /* Espacement sous le titre */
+}
+
+.about-title {
+    font-size: 3rem; /* Taille plus grande */
+    color: #b22222; /* Rouge vintage */
+    font-family: 'Courier New', Courier, monospace; /* Police vintage */
+    font-weight: bold; /* Mettre en gras */
+    line-height: 1.2; /* Réduction de l'espacement entre les lignes */
+    margin: 0; /* Supprimez les marges par défaut */
+}
 
 
